<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".ui.sebseGhatar.SebseGhatarActivity">


    <com.example.solid.mindgame.ui.widget.SquareView
        android:id="@+id/firstLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/border_margin"
            android:background="@drawable/board_background">

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/border_divider"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/gray" />

            <View
                android:layout_width="@dimen/border_divider"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:background="@color/gray" />

            <View
                android:layout_width="@dimen/border_divider"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/gray" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/border_divider"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/gray" />

            <com.example.solid.mindgame.ui.widget.SquareView
                android:id="@+id/secondLayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/border_gap">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/border_margin"
                    android:background="@drawable/board_background">

                    <com.example.solid.mindgame.ui.widget.SquareView
                        android:id="@+id/thirdLayer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/border_gap">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/border_margin"
                            android:background="@drawable/board_background">

                        </RelativeLayout>

                        <include layout="@layout/first_layer_circle_layout" />
                    </com.example.solid.mindgame.ui.widget.SquareView>
                </RelativeLayout>

                <include layout="@layout/first_layer_circle_layout" />

            </com.example.solid.mindgame.ui.widget.SquareView>
        </RelativeLayout>

        <include layout="@layout/first_layer_circle_layout" />

        <FrameLayout
            android:id="@+id/scoreHolder"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/redScore"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/sebzeh_red"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/blueScore"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/sebzeh_blue"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </FrameLayout>

    </com.example.solid.mindgame.ui.widget.SquareView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomItems"
        android:layout_below="@+id/firstLayer" />
    <LinearLayout
        android:id="@+id/opponentFinderHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomItems"
        android:layout_below="@+id/firstLayer"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:id="@+id/opponentTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="در حال یافت حریف"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="35dp"
            android:layout_marginTop="5dp"
            android:layout_height="35dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/bottomItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/top_shadow_gradient" />
        <include layout="@layout/bottom_menu" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <include layout="@layout/game_options"
            />

    </LinearLayout>
</RelativeLayout>