<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/menuSize"
  >
    <FrameLayout
        android:id="@+id/gameMenu"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="50dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_black_24dp"
            android:layout_gravity="center"
            />
    </FrameLayout>
    <EditText
        android:id="@+id/msgExt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/gameMenu"
        android:layout_toStartOf="@+id/gameMenu"
        android:layout_toRightOf="@+id/sendMessage"
        android:layout_toEndOf="@+id/sendMessage"
        android:gravity="right|center_vertical"
        android:visibility="gone"
        android:padding="8dp"
        android:hint="ارسال پیام..."
        android:background="@null"/>
    <FrameLayout
        android:id="@+id/sendMessage"
        android:visibility="gone"
        android:layout_width="50dp"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_send_black_24dp"
            android:layout_gravity="center"
            android:rotation="180"
            />
    </FrameLayout>
</RelativeLayout>